--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,12 +8,29 @@
     {{ fontawesome_html() }}
     {% block title %} {# Title given by other pages #}
     {% endblock %}
+
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
 
     {# Bootstrap CDN #}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <style> {# CSS for horizantal scrolling cards on home page #}
+    .testimonial-group {
+        overflow-x: auto;
+        white-space: nowrap;
+        overflow-y: hidden;
+    }
+
+    .testimonial-group > .row {
+        display: block;
+    }
+
+    .testimonial-group .testimonial-group--box {
+        display: inline-block;
+        float: none;
+    }
+    </style>
 </head>
 <body>
 <div class="container">
