tried making datetime picker default values - not working yet

--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -117,7 +117,7 @@
 
     <div class="row mt-5 text-center"> {# Services Table #}
         <div class="col-lg-12 ml-auto">
-            <div class="text-light p-2 h3" style="background-color: #40b3ff">services</div>
+            <div class="text-light p-2 h3" style="background-color: #40b3ff">Services</div>
 
             <table id="service" class="display">
                 <thead>
