--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -4,28 +4,26 @@
 {% extends 'layout.html' %} {# inherits format from layout.html #}
 
 {% block title %} {# Overides layout.html default title #}
-
-
-
-
-
-
     <title>Current Data - {{ server.ServerName }}</title> {# Title - shown in tab on browser #}
+    <link rel="icon" href="/static/favicons/health.ico">
 {% endblock title %}
 
 {% block content %}
 
 
-    <div class="row mt-3 text-center"> {# Page header #}
-        <div class="col-12 ml-auto p-3 mb-2 bg-secondary text-white">
-            <h1>Server System Monitoring Tool</h1>
+    <a class="text-decoration-none" href="{{ url_for('home') }}">
+        <div class="row mt-3 text-center"> {# Row for page header #}
+            <div class="col-12 ml-auto p-3 mb-2 bg-secondary text-white">
+                <h1>Server System Monitoring Tool</h1>
+            </div>
         </div>
-    </div>
+    </a>
 
     <div class="mt-3 text-center"> {# Home button & Rack & Server Names #}
         <div class="row card-body border border-dark font-weight-bold">
             <div class="text-left">
-                <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
+                <a class="btn btn-secondary btn-lg" href="{{ url_for('home') }}" role="button"><i
+                        class="fa fa-home"></i> Home</a>
             </div>
             <div class="col-10">
                 <h2 class="text-center">Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h2>
