--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,22 +15,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <style> {# CSS for horizantal scrolling cards on home page #}
-    .testimonial-group {
-        overflow-x: auto;
-        white-space: nowrap;
-        overflow-y: hidden;
-    }
+    <link rel="stylesheet" type="text/css" href="/static/styles/horizantalScrolling.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/tooltips.css">
 
-    .testimonial-group > .row {
-        display: block;
-    }
-
-    .testimonial-group .testimonial-group--box {
-        display: inline-block;
-        float: none;
-    }
-    </style>
 </head>
 <body>
 <div class="container">
