--- a/templates/Usage-RAM.html
+++ b/templates/Usage-RAM.html
@@ -22,7 +22,7 @@
     <div class="mt-3 text-center"> {# Home button & Rack & Server Names #}
         <div class="row card-body border border-dark font-weight-bold">
             <div class="text-left">
-                <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
+                <a class="btn btn-secondary btn-lg"  href="/real-time-data-overview/{{ server.ServerId }}" role="button">Back</a>
             </div>
             <div class="col-10">
                 <h2 class="text-center">Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h2>
