added autorefreshing (60s) to homepage and realtime page

--- a/templates/HomePageV2.html
+++ b/templates/HomePageV2.html
@@ -5,6 +5,7 @@
 {% extends 'layout.html' %} {# inherits format from layout.html #}
 
 {% block title %} {# Overides layout.html default title #}
+    <meta http-equiv="refresh" content="10" >
     <title>System Monitoring Tool</title> {# Title - shown in tab on browser #}
 {% endblock title %}
 
