--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -4,17 +4,12 @@
 {% extends 'layout.html' %} {# inherits format from layout.html #}
 
 {% block title %} {# Overides layout.html default title #}
-
-
-
-
-
+    <meta http-equiv="refresh" content="10" >
 
     <title>Current Data - {{ server.ServerName }}</title> {# Title - shown in tab on browser #}
 {% endblock title %}
 
 {% block content %}
-
 
     <div class="row mt-3 text-center"> {# Page header #}
         <div class="col-12 ml-auto p-3 mb-2 bg-secondary text-white">
@@ -200,7 +195,5 @@
             {% endif %}
         </div>
     </div>
-
-
 
 {% endblock content %}
