--- a/templates/Usage-RAM.html
+++ b/templates/Usage-RAM.html
@@ -40,7 +40,7 @@
     {#    </div>#}
     <div class="row text-center m-2"> {# Displays this servers RAM usage #}
         <div class="col-12">
-            <h2 class="text-{{ color }}"> RAM Usage: <b>{{ ametric.Ram }}%</b></h2>
+            <h2 class="text-{{ color[server.ServerId]['RamColor'] }}"> RAM Usage: <b>{{ ametric.Ram }}%</b></h2>
         </div>
     </div>
 
