--- a/static/styles/tooltips.css
+++ b/static/styles/tooltips.css
@@ -1,19 +1,7 @@
 .tooltip-inner {
-    background-color: #00cc00;
+    background-color: #222222;
 }
 
-.tooltip.bs-tooltip-right .arrow:before {
-    border-right-color: #00cc00 !important;
-}
-
-.tooltip.bs-tooltip-left .arrow:before {
-    border-right-color: #00cc00 !important;
-}
-
-.tooltip.bs-tooltip-bottom .arrow:before {
-    border-right-color: #00cc00 !important;
-}
-
-.tooltip.bs-tooltip-top .arrow:before {
-    border-right-color: #00cc00 !important;
+.tooltip.show {
+    opacity: 1 !important;
 }
