--- a/templates/Usage-CPUTemp.html
+++ b/templates/Usage-CPUTemp.html
@@ -42,7 +42,7 @@
     {#    </div>#}
     <div class="row text-center m-2"> {# Displays this servers CPU usage #}
         <div class="col-12">
-            <h2 class="text-{{ color }}"> CPU Usage: <b>{{ ametric.Cpu }}%</b></h2>
+            <h2 class="text-{{ color[server.ServerId]['CpuColor'] }}"> CPU Usage: <b>{{ ametric.Cpu }}%</b></h2>
         </div>
     </div>
 
