--- a/templates/HomePageV2.html
+++ b/templates/HomePageV2.html
@@ -25,12 +25,12 @@
             <a class="btn btn-secondary btn-lg" href="/masterlist" role="button"><i class="fas fa-list"></i> Master List</a>
         </div>
         <div class="col-10 text-right"> {# dropdown for filter | filter does not work #}
-            <form method="post">
-                <a>{{ form.csrf_token }}
-                    {{ form.filter }}</a>
-                <button type="submit" class="btn btn-secondary" name="form.sub">Filter</button>
-                <a class="btn btn-secondary" href={{ url_for('home') }} role="button">Reset</a>
-
+            <form name="filterForm" method="post">
+                <label>{{ "Server Type:" }}</label>
+                <a onchange="filterForm.submit()">
+                    {{ form.filter }}
+                    {{ form.csrf_token }}
+                </a>
             </form>
         </div>
     </div>
