--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -115,10 +115,13 @@
 
     </div>
 
+
     <div class="row mt-5 text-center"> {# Services Table #}
         <div class="col-lg-12 ml-auto">
-            <div class="text-light p-2 h3" style="background-color: #40b3ff">Services</div>
+        <button class="btn btn-light btn-lg btn-block" type="button" data-toggle="collapse" data-target="#collapseService" aria-expanded="false" aria-controls="collapseService">
+            <div class="text-light p-2 h3" style="background-color: #40b3ff">Services</div></button>
 
+            <div class="collapse" id="collapseService">
             <table id="service" class="display">
                 <thead>
                 <tr>
@@ -139,15 +142,18 @@
                 {% endfor %}
 
                 </tbody>
-            </table>
+            </table></div>
 
         </div>
     </div>
 
+
     <div class="row mt-5 text-center"> {# Database Table #}
         <div class="col-lg-12 ml-auto">
             {% if database != 0 %}
-                <div class="text-light p-2 h3" style="background-color: #40b3ff">Databases</div>
+                 <button class="btn btn-light btn-lg btn-block" type="button" data-toggle="collapse" data-target="#collapseDatabase" aria-expanded="false" aria-controls="collapseDatabase">
+                     <div class="text-light p-2 h3" style="background-color: #40b3ff">Databases</div></button>
+                <div class="collapse" id="collapseDatabase">
                 <table id="database" class="display">
                     <thead>
                     <tr>
@@ -168,15 +174,17 @@
                     {% endfor %}
 
                     </tbody>
-                </table>
+                </table></div>
             {% endif %}
         </div>
     </div>
     <div class="row mt-5 text-center"> {# Running Job Table #}
         <div class="col-lg-12 ml-auto">
             {% if runningjob != 0 %}
-                <div class="text-light p-2 h3" style="background-color: #40b3ff">Running Jobs</div>
-                <table id="jobs" class="display">
+                <button class="btn btn-light btn-lg btn-block" type="button" data-toggle="collapse" data-target="#collapseJobs" aria-expanded="false" aria-controls="collapseJobs">
+                     <div class="text-light p-2 h3" style="background-color: #40b3ff">Running Jobs</div></button>
+                <div class="collapse" id="collapseJobs">
+                    <table id="jobs" class="display">
                     <thead>
                     <tr>
                         <th>Job Name</th>
@@ -196,7 +204,7 @@
                     {% endfor %}
 
                     </tbody>
-                </table>
+                </table></div>
             {% endif %}
         </div>
     </div>
