--- a/templates/Usage-CPUTemp.html
+++ b/templates/Usage-CPUTemp.html
@@ -40,11 +40,12 @@
     </div>
 
     {#    </div>#}
-    <div class="row text-center m-2"> {# Displays this servers CPU usage #}
+    <div class="row text-center m-5"> {# Displays this servers CPU usage #}
         <div class="col-12">
             <h2 class="text-{{ color[server.ServerId]['CpuColor'] }}"> CPU Usage: <b>{{ ametric.Cpu }}%</b></h2>
         </div>
     </div>
+    <hr/>
 
     <div class="row mt-3 text-center">
         <div class="col-12">
@@ -63,13 +64,21 @@
         </div>
     </div>
 
-    <div class="row text-center mt-3 ml-auto"> {# forms for chard date range | NOT CURRENTLY WORKING #}
-        <div class="col-12">
+    <div class="row text-center mt-5 ml-auto"> {# forms for chard date range | NOT CURRENTLY WORKING #}
+        <div class="col">
             <form method="post">
-                {{ form.csrf_token }}
-                {{ render_field(form.startdate) }}
-                {{ render_field(form.enddate) }}
-                <input type="submit" value="update">
+                <div class="form-row">
+                    {{ form.csrf_token }}
+                    <div class="col-5">
+                        <h6>Start Date: {{ form.startdate }}</h6>
+                    </div>
+                    <div class="col-5">
+                        <h6>End Date: {{ form.enddate }}</h6>
+                    </div>
+                    <div class="col-2">
+                        <button type="submit" class="btn btn-success btn-sm">Update</button>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
