--- a/templates/Usage-Ping.html
+++ b/templates/Usage-Ping.html
@@ -39,12 +39,13 @@
     </div>
 
     {#    </div>#}
-    <div class="row text-center m-2"> {# Displays this servers RAM usage #}
+    <div class="row text-center m-5"> {# Displays this servers RAM usage #}
         <div class="col-12">
             <h2 class="text-{{ color[server.ServerId]['PingColor'] }}"> Ping Status: <b>{{ ametric.PingLatency }} ms
                 - {{ color[server.ServerId]['PingStatus'] }}</b></h2>
         </div>
     </div>
+    <hr/>
 
     <div class="row mt-3 text-center">
         <div class="col-12">
@@ -63,26 +64,21 @@
         </div>
     </div>
 
-    <div class="row text-center mt-3 ml-auto"> {# forms for chard date range | NOT CURRENTLY WORKING #}
-        <div class="col-12">
+    <div class="row text-center mt-5 ml-auto"> {# forms for chard date range | NOT CURRENTLY WORKING #}
+        <div class="col">
             <form method="post">
-                {{ form.csrf_token }}
-                {{ render_field(form.startdate) }}
-                {{ render_field(form.enddate) }}
-                <input type="submit" value="update">
-
-                {#                <div class="input-group mb-3">#}
-                {#                    <div class="input-group-prepend">#}
-                {#                        <span class="input-group-text" id="basic-addon3">Start & End Date</span>#}
-                {#                    </div>#}
-                {#                    <input type="text" placeholder="09/01/2019" aria-label="start date" class="form-control">#}
-                {#                    <input type="text" placeholder="10/01/2019" aria-label="end date" class="form-control">#}
-                {#                </div>#}
-                {#            </div>#}
-                {#            <div class="col-2">#}
-                {#                <a class="btn btn-success" href="#" onclick="window.location.reload(true);" role="button">Refresh</a>#}
-                {#                <input type="submit" value="update">#}
-                {#            </div>#}
+                <div class="form-row">
+                    {{ form.csrf_token }}
+                    <div class="col-5">
+                        <h6>Start Date: {{ form.startdate }}</h6>
+                    </div>
+                    <div class="col-5">
+                        <h6>End Date: {{ form.enddate }}</h6>
+                    </div>
+                    <div class="col-2">
+                        <button type="submit" class="btn btn-success btn-sm">Update</button>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
