--- a/templates/MasterList.html
+++ b/templates/MasterList.html
@@ -1,5 +1,3 @@
-{% from '_formhelpers.html' import render_field %} {# import neede for chard range forms #}
-
 {% extends 'layout.html' %} {# Inherits format from layout.html #}
 
 
@@ -9,45 +7,45 @@
 {% endblock title %}
 
 {% block content %}
-
-    <a class="text-decoration-none" href="{{ url_for('home') }}">
-        <div class="row mt-3 text-center"> {# Row for page header #}
+    {# Site title bar #}
+    <a class="text-decoration-none" href="{{ url_for('home') }}">  {# link to home page #}
+        <div class="row mt-3 text-center">
             <div class="col-12 ml-auto p-3 mb-2 bg-secondary text-white">
-                <h1>Server System Monitoring Tool</h1>
+                <h1>Server System Monitoring Tool</h1> {# Site title #}
             </div>
         </div>
     </a>
 
-    <div class="mt-3 text-center"> {# Home button & MasterList #}
+    <div class="mt-3 text-center"> {# Home & MasterList button #}
         <div class="row card-body border border-dark font-weight-bold">
-            <div class="text-left">
-                <a class="btn btn-secondary btn-lg" href="{{ url_for('home') }}" role="button"><i
-                        class="fa fa-home"></i> Home</a>
+            <div class="text-left">  {# home button #}
+                <a class="btn btn-secondary btn-lg" href="{{ url_for('home') }}" role="button">
+                    <i class="fa fa-home"></i> Home
+                </a>
             </div>
             <div class="col-10">
-                <h2 class="text-center">Master List</h2>
+                <h2 class="text-center">Master List</h2> {# Page title #}
             </div>
         </div>
     </div>
-    <div class="row mt-3 text-center">
+
+    <div class="row mt-3 text-center">  {# Displays flash messages if there are any #}
         <div class="col-12">
             {% with messages = get_flashed_messages(with_categories=true) %}
-                <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
                 {% if messages %}
                     {% for category, message in messages %}
                         <div class="alert alert-{{ category }} alert-dismissible" role="alert">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                                     aria-hidden="true">&times;</span></button>
-                            <!-- <strong>Title</strong> --> {{ message }}
+                            {{ message }}
                         </div>
                     {% endfor %}
                 {% endif %}
             {% endwith %}
         </div>
     </div>
-    <div class="row mt-3 text-center"> {# Master List table #}
 
-
+    <div class="row mt-3 text-center"> {# Master List table row #}
         <div class="col-12 ">
             <table class="table table-bordered  table-secondary ">
                 <thead>
@@ -58,29 +56,25 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    {% for m in mList %}
+                {% for m in mList %}  {# Creates a row for ea #}
+                    <tr>
                         <td scope="row">
+                            {# Delte button #}
                             <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal"
                                     data-target="#{{ m.Type | safe }}{{ m.Name | safe }}">Delete
                             </button>
-
-
-                            {#                            <input class="form-check-input position-static" type="checkbox" id="blankCheckbox"#}
-                            {#                                   value="option1" aria-label="...">#}
-                            {#                        </div>#}
-
-
                         </td>
                         <td>{{ m.Type }}</td>
+                        {# Server Type #}
                         <td>{{ m.Name }}</td>
-                        </tr>
-                    {% endfor %}
+                        {# Server ID #}
+                    </tr>
+                {% endfor %}
 
-                <form method="post">
-                    {{ form.csrf_token }}
+                <form method="post"> {# Form row for adding a server #}
+                    {{ form.csrf_token }} {# cross site request forgery token #}
                     <tr>
-                        <td>
+                        <td>  {# Add button #}
                             <button type="submit" class="btn btn-success btn-sm m-1">ADD</button>
                         </td>
                         <td>
@@ -88,9 +82,9 @@
                                 {{ form.type }}
                             </div>
                         </td>
-                        <td>{# Text Box Input #}
+                        <td>{# Text Box Input for server ID #}
                             {{ form.name }}
-                            <small class="form-text text-muted">
+                            <small class="form-text text-muted">  {# error messages for text input #}
                                 {% for err in form.name.errors %}
                                     {{ err }}
                                 {% endfor %}
@@ -102,7 +96,8 @@
             </table>
         </div>
     </div>
-    {% for m in mList %}
+
+    {% for m in mList %}  {# Modals/Popups to confirm intent to delete server #}
         <div class="modal fade" id="{{ m.Type | safe }}{{ m.Name | safe }}" tabindex="-1" role="dialog"
              aria-labelledby="deleteModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -118,12 +113,13 @@
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
                         </button>
                         <form action="{{ url_for('deleteServer', mlType=m.Type, mlName=m.Name) }}"
-                              method="POST">
+                              method="POST">  {# button to delete #}
                             <input class="btn btn-danger" type="submit" value="Delete">
                         </form>
                     </div>
                 </div>
             </div>
         </div>
+
     {% endfor %}
 {% endblock content %}
